--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+poker-network (2.0.1-3) pokermania; urgency=low
+
+  * back to old betting structure names again
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Wed, 21 Sep 2010 15:00:00 +0200
+
 poker-network (2.0.1-2) pokermania; urgency=low
 
   * final table reward only on sit_n_go!="y"
