--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+poker-network (2.0.2-1) pokermania; urgency=low
+
+  * user2table money and bet columns are now BIGINT
+  * delete route entries of canceled tourneys in PokerService.checkTourneySchedule
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 09 Jan 2012 12:00:00 +0200
+
 poker-network (2.0.1-4) pokermania; urgency=low
 
   * added PacketPokerStateInformation (better information about local and
