--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+poker-network (2.0.3-1) pokermania; urgency=low
+  * explain is set also on avatar.login (explaining now possible through
+    binary protocol)
+  * added Q long long type, used for PacketPokerChips (higher bets possible)
+  * added twisted 10.1 dependency
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 21 Jan 2012 12:00:00 +0200
+
 poker-network (2.0.2-1) pokermania; urgency=low
 
   * user2table money and bet columns are now BIGINT
