--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+poker-network (2.0.3-5) pokermania; urgency=low
+
+  * pokerservice.eventTable fix
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Thu, 09 Feb 2012 01:00:00 +0200
+
 poker-network (2.0.3-4) pokermania; urgency=low
 
   * route query on eventTable removed
