--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+poker-network (2.0.6-1) pokermania; urgency=low
+
+  fixes, improvements: #5257, #5495, #5515
+
+  * 4cdf0d2 set tourney game names to "name(serial)" so name and serial can be distinguished, fixes #5257
+  * 264d020 shutdown routine improved
+  * implemented lock checking so locks get detected sooner in games and tournaments
+  * e3c9b53 tourney_serial sent on PacketPokerTable
+  * b8fb94c Packet structure refactoring
+  * f88cb56 kill timeout deleted #5495
+  * 3ffeffc refund buyin when SnGs are canceled, fixes #5515
+  * a5a6538 cleanup pokermanhole and remove ureload
+  * e58d637 blindAnte pokertable test added + several minor fixes
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 23 Apr 2012 16:00:00 +0200
+
 poker-network (2.0.5-1) pokermania; urgency=low
 
   * changed poker-engine dependecy to v1.3.12
