--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+poker-network (2.1.1-3) pokermania; urgency=low
+
+  * updated poker-engine (1.4.2-1)
+  * d69684d deleted obsolete packet definitions
+  * 9378eba PACKET_POKER_LEAVE does not kill explain, PacketPokerWaitFor.reason is a 'bs'
+  * 665eb02 poker-network v2.1.1-2, poker-engine v1.4.1
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 26 Apr 2012 19:00:00 +0200
+
 poker-network (2.1.1-2) pokermania; urgency=low
 
   * updated dependecy to poker-engine
