--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+poker-network (2.1.3-2) pokermania; urgency=low
+
+  * updated pokeradditions
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 10 May 2012 16:00:00 +0200
+
 poker-network (2.1.3-1) pokermania; urgency=low
 
   * caea142 just eval HandStrength if there are enough (5) cards, fixes 4d4f788, fixes #5635
