--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
+poker-network (2.1.3-3) pokermania; urgency=low
+
+  * afff89c fixed test-pokertable race condition
+  * cea6f74 PokerTimeoutWarning is sent
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 14 May 2012 16:00:00 +0200
+
 poker-network (2.1.3-2) pokermania; urgency=low
 
   * updated pokeradditions
 
- -- Andor Goetzendorff <andor@pokermania.de>  Mon, 10 May 2012 16:00:00 +0200
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 10 May 2012 16:00:00 +0200
 
 poker-network (2.1.3-1) pokermania; urgency=low
 
@@ -13,7 +20,7 @@ poker-network (2.1.3-1) pokermania; urgency=low
   * 4d4f788 After PacketPokerBoardCards, send PacketPokerPlayerHandStrength to everyone that isSit, fixes #5635
   * 1e9de58 stop pokertable lockcheck on __lockCheckEndCallback
 
- -- Andor Goetzendorff <andor@pokermania.de>  Mon, 10 May 2012 15:00:00 +0200
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 10 May 2012 15:00:00 +0200
 
 poker-network (2.1.2-1) pokermania; urgency=low
 
@@ -23,7 +30,7 @@ poker-network (2.1.2-1) pokermania; urgency=low
   * 1cd0cc3 added extra_wait_sng_start, added broadcast message on tourney start
   * 8cc0ad6 ignore sit event_type in PokerTable.syncDatabase
 
- -- Andor Goetzendorff <andor@pokermania.de>  Mon, 04 May 2012 19:00:00 +0200
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 04 May 2012 19:00:00 +0200
 
 poker-network (2.1.1-4) pokermania; urgency=low
 
