--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+poker-network (2.1.4-4) pokermania; urgency=low
+
+  * 10abf1f reflogging 1.0.1-1
+  * 7f4f21a converted logging log levels to syslog log levels in TwistedHandler
+  * a24394c got rid of verbose, message, error and some unused imports
+  * f613a06 all logging statements now use "static" strings as first argument
+  * bf47433 don't pass args if not available, refs #5929
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 25 May 2012 13:25:04 +0200
+
 poker-network (2.1.4-3) pokermania; urgency=low
 
   * hotfixes
