--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+poker-network (2.1.5-3) pokermania; urgency=low
+
+  * 53c22ec content type is text/javascript if jsonp
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 22 Jun 2012 14:35:04 +0200
+
 poker-network (2.1.5-2) pokermania; urgency=low
 
   * updated pokeradditions
