poker-network (2.2.0-1) pokermania; urgency=low

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+poker-network (2.2.0-1) pokermania; urgency=low
+
+  * 30de03e updated pokeradditions, debian/control
+  * ad21569 use temporaryplayerspattern for whole line
+  * 726414c mega fixing. poker internal version 2.2.0
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 19 Jul 2012 03:15:00 +0200
+
 poker-network (2.1.5-5) pokermania; urgency=low
 
   * d2dbf65 send tourney_serial instead of game_id, refs #6217
