--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+poker-network (2.2.0-3) pokermania; urgency=low
+
+  * b3a4e02 forgot PokerChat...
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 23 Jul 2012 23:30:00 +0200
+
 poker-network (2.2.0-2) pokermania; urgency=low
 
   * 60ffd8e fix: pokermessage can receive unicode
