--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+poker-network (2.2.2-1) pokermania; urgency=low
+
+  * 7c7339f now using new import paths in config file, fixes #6578
+  * 6845464 tests for PacketPokerTourneyCancel and -Start implemented, refs #6221
+  * 01019da PacketPokerTourneyCancel and -Start implemented, refs #6621
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 39 Aug 2012 11:00:00 +0200
+
 poker-network (2.2.1-2) pokermania; urgency=low
 
   * b675474 remove twisted/plugins/__init__.py
