--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+poker-network (2.2.2-4) pokermania; urgency=low
+
+  * commit 4847da0 don't delete service from multiservice when broke, refs #6936
+  * commit 442ff8d log.inform and not log.info!
+  * commit e566aaa bots check if they can log in, log error if not, refs #6936
+  * commit 4847da0 don't delete service from multiservice when broke, refs #6936
+  * commit 442ff8d log.inform and not log.info!
+  * commit e566aaa bots check if they can log in, log error if not, refs #6936
+  * commit 2fdafba enable logging for poker bots
+  * commit 0ae11d8 changed Player isBot, isSitOut isAuto.. debug statement to debug
+  * commit 8abf018 fixed test_gamehistory, added 'foldwin' field
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 28 Sep 2012 12:00:00 +0200
+
 poker-network (2.2.2-3) pokermania; urgency=low
 
   * 451779c some fixes found out during tourney_rebuy development
