--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+poker-network (2.2.2-5) pokermania; urgency=low
+
+  * rebuild because of wrong protocol_number
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 28 Sep 2012 12:00:00 +0200
+
 poker-network (2.2.2-4) pokermania; urgency=low
 
   * commit 4847da0 don't delete service from multiservice when broke, refs #6936
