--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+poker-network (2.2.2-8) pokermania; urgency=low
+
+  * 15ebe4c an explain error is now a log.warn instead of .inform
+  * 696089f removed obsolete assertion error
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 10 Oct 2012 16:00:00 +0200
+
 poker-network (2.2.2-7) pokermania; urgency=low
 
   * 80e77f6 changed _import, now uses sys.modules
