--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,19 @@
+poker-network (2.2.2-9) pokermania; urgency=low
+
+  * d3f0227 typo in bot log_level loading fixed
+  * c08b51a use reconnect delay when reconnecting in all cases, refs #7136
+  * 484a575 changed all erroneous avatar messages to .inform, changed to more sensible messages
+  * 4455016 flattened conditional structure in pokeravatar a bit, refs #7101
+  * 1dda8e8 check if player is actually playing for all avatar game-relevant packets, refs #7101
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Fri, 12 Oct 2012 17:30:00 +0200
+
 poker-network (2.2.2-8) pokermania; urgency=low
 
   * 15ebe4c an explain error is now a log.warn instead of .inform
   * 696089f removed obsolete assertion error
 
- -- Andor Goetzendorff <andor@pokermania.de>  Fri, 10 Oct 2012 16:00:00 +0200
+ -- Andor Goetzendorff <andor@pokermania.de>  Wed, 10 Oct 2012 16:00:00 +0200
 
 poker-network (2.2.2-7) pokermania; urgency=low
 
