--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+poker-network (2.2.3-4) pokermania; urgency=low
+
+  * 5a6e1f9 fix timeout_key
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Mon, 05 Nov 2012 18:00:00 +0200
+
 poker-network (2.2.3-3) pokermania; urgency=low
 
   * 669618c Fix that one player could attend multiple tourneys
