--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+poker-network (2.2.3-13)
+ * 539fefd user cannot join/observe a poker table when there is no entry in the users table
+
+-- Andor Goetzendorff <andor@pokermania.de>  Mon, 10 Dec 2012 13:00:00 +0200
+
 poker-network (2.2.3-12) pokermania; urgency=low
 
   * 6cc4dff removed tournament break messages, refs #2819
