--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,5 @@
-poker-network (2.2.3-13)
+poker-network (2.2.3-13) pokermania; urgency=low
+
  * 539fefd user cannot join/observe a poker table when there is no entry in the users table
 
 -- Andor Goetzendorff <andor@pokermania.de>  Mon, 10 Dec 2012 13:00:00 +0200
