--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+poker-network (2.2.3-15) pokermania; urgency=low
+
+  * 03e820e enable rebuys during tournies, refs #6613
+  * dd56ca9 only log inconsistent user credentials if there is a memcache auth
+
+ -- Andor Goetzendorff <andor@pokermania.de>  Tue, 14 Dec 2012 17:00:00 +0200
+
 poker-network (2.2.3-14) pokermania; urgency=low
 
   * bbfa459 another explain-money inconsistency fix. all tests working again
